<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2015 Jack Q (QiaoBo#outlook.com)
  ~ >> Created at 2015 - 1 - 27 .
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_activity_data_management">

        <Preference
            android:key="update_list"
            android:summary="@string/preference_update_list_summary"
            android:title="@string/preference_update_list"/>
        <Preference
            android:title="@string/preference_manage_data"
            android:summary="@string/preference_manage_data_summary"
            android:key="manage_data"/>
    </PreferenceCategory>
    <!--<PreferenceCategory android:title="TitleSample">-->

    <!--</PreferenceCategory>-->
</PreferenceScreen>