

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2015 Jack Q (QiaoBo#outlook.com)
  ~ >> Created at 2015 - 1 - 27 .
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jackq.studyroomchecker.LoadingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="70dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon_description"
            android:src="@drawable/ic_launcher"
            android:minWidth="150dp"
            android:minHeight="150dp"/>

        <TextView
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30dp"/>

    </LinearLayout>

    <ViewSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/loading_view_flipper"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:autoStart="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/loading_default_view"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/loading_status_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loading"
                android:textSize="15sp"

                android:textColor="@color/loading_text_information" />
            <!--android:textColor="@android:color/holo_red_light"-->

            <ProgressBar

                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:id="@+id/progressBar"
                android:indeterminate="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_first_time_tip"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal"
                android:id="@+id/loading_question_view">

                <!--<Button-->
                <!--android:id="@+id/loading_download"-->
                <!--android:layout_width="150dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="50"-->
                <!--android:text="@string/download" /> -->
                <Button
                    android:id="@+id/loading_continue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/string_continue" />
                <Button
                    android:id="@+id/loading_exit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/loading_exit" />

            </LinearLayout>


            </LinearLayout>
    </ViewSwitcher>


</RelativeLayout>
